tests-compare/fixtures/babel/packages/babel-parser/test/fixtures/experimental/import-assertions/valid-syntax-export-without-attributes/input.js
export { foo } from "foo.json";
