tests-compare/fixtures/babel/packages/babel-parser/test/fixtures/experimental/import-assertions/invalid-syntax-export-without-attributes-identifier/input.js
export { x } from "foo" assert;
